package switchfive.project.mappers.mappersApp.iMappers;

public interface IUserMapper {
}
